fix: text in `<Text>` component would not wrap (#108)

--- a/v2/components/text/text.scss
+++ b/v2/components/text/text.scss
@@ -1,6 +1,6 @@
 .text {
     font-family: 'Heebo', sans-serif;
-
+    white-space: normal;
     &--dark {
         color: white;
     }
